# exit

./: .gitignore  AGENTS.md  ARCHITECTURE_CONTRADICTIONS.md  AUDIT_MANIFEST.md  FINAL_REMEDIATION_REPORT.md  GENESIS.md  GENESIS_GAP_MATRIX.md  LONG_RUN_TARGETS.md  README.md  RUNBOOK.md  build_backend.py  events.jsonl  generate_metaos_prompt_pack.sh  install_metaos.sh  metrics.jsonl  py_compile.py  pyproject.toml  release_manifest.json  run-oed-smoke.sh  run-phase6-soak.py  run_metaos.py  setup.py
.metaos_runtime.bak.1772785763/: archive.jsonl  artifact_registry.jsonl
app/: __init__.py  cli.py
archive/: artifacts.jsonl  domain_genomes.jsonl  policies.jsonl  pressure_snapshots.jsonl  quests.jsonl  quota_decisions.jsonl
artifact/: __init__.py  archive.py  civilization_registry.py  lineage.py  registry.py  registry_view.py  runtime_store.py  store.py
core/: __init__.py  artifact.py  autonomous_daemon.py  autonomous_daemon.py.bak  autonomous_daemon.py.bak2  constitution_guard.py  event_log.py  guardrail.py  kernel_adapter.py  llm_provider.py  log.py  loop.py  metaos_engine.py  metrics.py  mutation.py  open_ended_engine.py  persistent_swarm.py  policy.py  quest.py  registry.py  replay.py  replay_engine.py  shared_replay.py  strategy_genome.py  supervisor.py  swarm_engine.py  swarm_policy.py
data/: artifact_registry.jsonl
docs/: 00_METAOS_CONSTITUTION.md  01_METAOS_MASTER_SPEC.md  02_METAOS_INDEX.md  AUTONOMY_TARGET.md
domains/: __init__.py  code.py  code_domain.py  contract.py  domain_crossbreed.py  domain_genome.py  domain_genome_mutation.py  domain_recombination.py  fiction.py  loader.py  research.py  science.py
ecosystem/: __init__.py  artifact_market.py  domain_clusters.py  ecosystem_registry.py  ecosystem_state.py  knowledge_network.py  node_discovery.py  simulation.py
evolution/: __init__.py  evolve.py  pressure_engine.py  quest_ecology.py  quest_generator.py  quota_allocator.py
federation/: __init__.py  federation_adoption.py  federation_exchange.py  federation_hydration.py  federation_replay.py  federation_state.py  federation_topology.py  federation_transport.py  hydration_policy.py  simulation.py
genesis/: __init__.py  contracts.py  dispatcher.py  event_log.py  invariants.py  logger.py  policy_runtime.py  recovery.py  replay.py  spine.py  state_machine.py  supervisor.py  validator.py
kernel/: __init__.py  contracts.py  dispatcher.py  invariants.py  policy_runtime.py  recovery.py  replay.py  spine.py  state_machine.py  supervisor.py  validator.py
loop/: __init__.py  model.py
metaos/: __init__.py  cli.py
metaos-build-prompts/: 00_master_prompt.txt  01_core_runtime.txt  02_logging_system.txt  03_artifact_store.txt  04_metrics_engine.txt  05_strategy_genome.txt  06_diversity_economy.txt  07_quest_manager.txt  08_ops_scripts.txt
metaos_a/: __init__.py  domain_engine.py  domain_resources.py  domain_state.py
metaos_b/: __init__.py  experiment_selector.py  exploration_scheduler.py  manager_state.py  resource_allocator.py  strategy_comparator.py
metaos_c/: __init__.py  civilization_engine.py  civilization_memory.py  civilization_state.py  domain_discovery.py  exploration_topology.py  meta_exploration.py  strategy_generation.py
observer/: __init__.py  lineage_view.py  projections.py  status.py
ops/: cleanup-artifacts.sh  cleanup-runtime.sh  enable-metaos-instances.sh  healthcheck.sh  rotate-instance.sh  rotate-runtime.sh  run-instance.sh  run-instances.sh  run-metaos.sh  validate-runtime.sh
runtime/: allocator_artifact.py  artifact_civilization.py  autonomous_work_loop.py  ceiling_metrics.py  civilization_governor.py  civilization_memory.py  civilization_stability.py  civilization_state.py  consumer_api.py  consumer_control.py  consumer_interventions.py  consumer_reporting.py  core_loop.py  diversity_guard.py  domain_creation.py  domain_expansion_policy.py  domain_lifecycle.py  domain_pool.py  domain_router.py  economy_controller.py  environment_pressure.py  evaluation_ecology.py  evaluation_evolution.py  evaluation_lifecycle.py  evolve.py  evolve_exploration_strategy.py  exploration_cycle.py  exploration_economy.py  exploration_loop.py  exploration_market_stability.py  exploration_topology.py  genesis_ceiling.py  hysteresis.py  kernel_adapter.py  knowledge_system.py  lineage_branching.py  lineage_ecology.py  long_horizon_stability.py  long_run_validation.py  memory_pressure.py  (+35 more)
scripts/: build_release_zip.sh  clean_product_tree.sh  release_manifest.py  run_threshold_autonomy_loop.py  run_threshold_autonomy_loop.sh  validate_product_shape.sh  validate_release_tree.sh
signal/: __init__.py  ceiling.py  log.py  pressure.py  sources.py
state/: checkpoint.json  quest.json
strategy/: __init__.py  mutation.py  policy_proposals.py  quest_portfolio.py  quota.py  selection.py
tests/: test_adapter_runtime_core.py  test_allocator_artifact.py  test_architecture_traceability_docs.py  test_artifact_law.py  test_artifact_lineage_arch.py  test_artifact_market.py  test_artifact_population.py  test_autonomous_consumer_loop.py  test_boundary_constitution.py  test_boundary_enforcement.py  test_budget_cycle.py  test_canonical_imports.py  test_ceiling_metrics.py  test_civilization_governor.py  test_civilization_memory.py  test_civilization_mvp.py  test_civilization_selection.py  test_civilization_stability.py  test_civilization_state_fields.py  test_cli_commands.py  test_cli_smoke.py  test_collapse_guard.py  test_constitution_guard_arch.py  test_consumer_operating_report.py  test_consumer_runtime_platform.py  test_consumer_scaffold_generator.py  test_consumer_soak_and_apply.py  test_consumer_stress_and_interventions.py  test_consumer_versioning.py  test_docs_completeness.py  (+150 more)
(+28183 files in other folders)
