[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaos"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "app*", "artifact*", "core*", "domains*", "ecosystem*", "evolution*", "federation*", "genesis*", "kernel*", "loop*", "metaos*", "metaos_a*", "metaos_b*", "metaos_c*", "observer*", "runtime*", "signal*", "strategy*", "validation*"
]

[project.scripts]
metaos = "metaos.cli:main"

[tool.ruff]
line-length = 88
extend-exclude = ["config", "root", "build", "dist", "tests"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"core/*.py" = ["F403"]
"evolution/*.py" = ["F403"]
"metaos/kernel/*.py" = ["F403"]
"metaos/runtime/*.py" = ["F403"]
"metaos/domains/*.py" = ["F403"]

[tool.mypy]
python_version = "3.11"
files = ["app", "artifact", "core", "domains", "ecosystem", "evolution", "federation", "genesis", "kernel", "loop", "metaos", "metaos_a", "metaos_b", "metaos_c", "observer", "runtime", "signal", "strategy", "validation"]
exclude = "^(docs|tests)/"
ignore_missing_imports = true
follow_imports = "silent"
disable_error_code = ["import-untyped", "type-var", "assignment", "call-overload", "union-attr", "arg-type", "valid-type", "attr-defined", "unused-ignore", "no-redef", "return-value", "index", "operator", "dict-item"]
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app", "artifact", "core", "domains", "ecosystem", "evolution", "federation", "genesis", "kernel", "loop", "metaos", "metaos_a", "metaos_b", "metaos_c", "observer", "runtime", "signal", "strategy", "validation"]
omit = ["tests/*"]
